[package]
name = "rust_game_dev"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "e1904bc"
features = [
    # remove dynamic_linking when sharing executables
    "dynamic_linking",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[workspace]
resolver = "2"

[workspace.package."*"]
publish = false
